Fix excess whitespace

--- a/src/app/_ui/components/BenefitList/BenefitList.module.css
+++ b/src/app/_ui/components/BenefitList/BenefitList.module.css
@@ -1,7 +1,4 @@
-.benefits {
-  margin-block: 6em;
-}
-  
+ 
 .benefits_header {
   width: 100%;
   /* max-width: 72.5rem; */
